cleanups to getting started page

--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -21,36 +21,27 @@ The Clojure tools require that either the `java` command is on the path or that 
 
 == Clojure installer and CLI tools
 
-Clojure provides <<deps_and_cli#,command line tools>> that can be used to start a Clojure repl, use Clojure and Java libraries, and start Clojure programs. See the https://github.com/clojure/brew-install/blob/1.10.1/CHANGELOG.md[changelog] for version information.
+Clojure provides <<deps_and_cli#,command line tools>> that can be used to start a Clojure repl, use Clojure and Java libraries, and start Clojure programs. 
 
-After following these installation instructions, you should be able to use the `clj` or `clojure` command to start a Clojure repl.
+Follow these instructions to install the `clj` and `clojure` tools:
 
 === Installation on Mac via https://brew.sh[Homebrew]
 
-Install the command line tools with `brew` from the clojure/tools tap:
+Install the command line tools with `brew` from the https://github.com/clojure/homebrew-tools[clojure/tools tap]:
 
 [source,shell]
 ----
 brew install clojure/tools/clojure
 ----
 
-If you've already installed, you can upgrade to the latest release with:
+If you've already installed this way in the past, you can upgrade to the latest release with:
 
 [source,shell]
 ----
 brew upgrade clojure/tools/clojure
 ----
 
-[NOTE]
-====
-Clojure brew formulas use "devel" blocks, which have been deprecated by brew. We will be updating these brew formulas to address the issue, but for now, it is only a warning and you can proceed! Everything will work despite the warning.
-====
-
-Also see: https://github.com/clojure/homebrew-tools[Clojure's Homebrew tap] for more information.
-
 === Installation on Linux
-
-Note: You can now use https://docs.brew.sh/Homebrew-on-Linux[Homebrew on Linux or Windows with WSL], similar to the Mac installation.
 
 To install with the Linux script installer:
 
@@ -67,13 +58,18 @@ sudo ./linux-install-1.10.1.727.sh
 === Installation on Windows
 
 An early release version of clj on Windows is available at https://github.com/clojure/tools.deps.alpha/wiki/clj-on-Windows[clj on Windows].
-Please provide feedback at https://clojure.atlassian.net/projects/TDEPS.
+Please provide feedback on https://ask.clojure.org[Ask Clojure] or Clojurians slack in #clj-on-windows.
+
+=== Other versions
+
+See the <<xref/../../releases/tools#,changelog>> for version history and the https://github.com/clojure/homebrew-tools[Clojure tap] for info on installing older versions or newer prereleases instead.
+
 
 == Other ways to run Clojure
 
 *Local build*
 
-Download and build Clojure from source (requires Git, Java, and Maven):
+Most Clojure users use Clojure jars downloaded from the Maven central repository (by the tools above or other Clojure build tools). However, you can also build Clojure from source with necessary dependent jars into a single executable jar (requires Git, Java, and Maven):
 
 [source,shell]
 ----
@@ -82,7 +78,7 @@ cd clojure
 mvn -Plocal -Dmaven.test.skip=true package
 ----
 
-Then start the REPL with the local jar:
+Then start the REPL with the local jar (note this will not work with the jars in Maven as they do not include dependencies):
 
 [source,shell]
 ----
