--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -23,7 +23,7 @@ The Clojure tools require that either the `java` command is on the path or that 
 
 Clojure provides <<deps_and_cli#,command line tools>> that can be used to start a Clojure repl, use Clojure and Java libraries, and start Clojure programs. 
 
-Follow these instructions to install the `clj` and `clojure` tools:
+Follow these instructions to install the latest release of the `clj` and `clojure` tools:
 
 === Installation on Mac via https://brew.sh[Homebrew]
 
@@ -61,7 +61,7 @@ To install to a custom location (like `/opt/infrastructure/clojure`), use the op
 
 [source,shell]
 ----
-sudo ./linux-install-${VERSION}.sh --prefix /opt/infrastructure/clojure
+sudo ./linux-install-1.10.1.727.sh --prefix /opt/infrastructure/clojure
 ----
 
 Extend the MANPATH in `/etc/man_dev.conf` to include the manual pages:
