--- a/README.adoc
+++ b/README.adoc
@@ -4,7 +4,7 @@ Alex Miller
 :jbake-type: page
 :toc: macro
 
-This web site is an open-source repository of content about the Clojure programming language and its greater ecosystem, hosted at http://clojure.org.
+This web site is an open-source repository of content about the Clojure programming language and its greater ecosystem, hosted at https://clojure.org.
 
 == Contributing
 
@@ -41,6 +41,6 @@ Generate the pages:
 
 ## Terms of Use
 
-Copyright © 2019 Rich Hickey and contributors
+Copyright © 2016-2020 Rich Hickey and contributors
 
 All documentation contained in this repository is licensed by Rich Hickey under the http://www.eclipse.org/legal/epl-v10.html[Eclipse Public License v1.0] unless otherwise noted. To submit a pull request or other contribution, you must sign the http://clojure.org/community/contributing[Clojure Contributor Agreement].
