--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -188,6 +188,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * https://www.health-samurai.io[HealthSamurai,opts=nofollow]
 * https://www.helpshift.com/[Helpshift,opts=nofollow]
 * http://www.hendrickauto.com/[Hendrick Automotive Group,opts=nofollow]
+* https://www.heromarketing.nl/[Hero Marketing,opts=nofollow]
 * http://www.heroku.com[Heroku,opts=nofollow]
 * https://hexawise.com/[Hexawise,opts=nofollow]
 * https://homescreen.is/[#Homescreen,opts=nofollow]
