--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -40,6 +40,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://ardoq.com/[Ardoq,opts=nofollow]
 * https://atomist.com[Atomist,opts=nofollow]
 * https://attendify.com/[Attendify,opts=nofollow]
+* https://audiencerepublic.com[Audience Republic,opts=nofollow]
 * http://auspost.com.au/[Australia Post,opts=nofollow]
 * http://www.autheos.com/[Autheos,opts=nofollow]
 * https://www.bandsquare.com/[BandSquare,opts=nofollow]
