--- a/content/community/success_stories.adoc
+++ b/content/community/success_stories.adoc
@@ -496,7 +496,7 @@ Here are just some of the public success stories from companies using Clojure.  
                     <p>Clojure was used to develop a modest web site, and we appreciate how it allows us to quickly react to feature requests.</p>
                     <cite>
                       <strong>Bastien Guerry</strong>
-                      Free Software Office at the French digital administration
+                      Free Software Officer at the French digital administration
                     </cite>
                   </blockquote>
                 </li>
