raise prominence of admonition block in spec guide

--- a/content/guides/spec.adoc
+++ b/content/guides/spec.adoc
@@ -106,11 +106,12 @@ A registered spec identifier can be used in place of a spec definition in the op
 You will see later that registered specs can (and should) be used anywhere we compose specs.
 
 .Spec Names
-****
-In this guide we will often use auto-resolved keywords like `::date`. The Clojure reader resolves these to a fully-qualified keyword using the current namespace. You may also see some cases where a fully-qualified keyword like `:animal/dog` is used to name a spec. 
+[IMPORTANT]
+====
+In this guide we will often use auto-resolved keywords like `::date`. The Clojure reader resolves these to a fully-qualified keyword using the current namespace (`pass:[*ns*]`). You may also see some cases where a fully-qualified keyword like `:animal/dog` is used to name a spec.
 
 Generally, Clojure code should use keyword namespaces that are sufficiently unique such that they will not conflict with other spec users. If you are writing a library for public use, spec namespaces should include the project name, url, or organization such that you will not conflict. Within a private organization, you may be able to use shorter names - the important thing is that they are sufficiently unique to avoid conflicts.
-****
+====
 
 Once a spec has been added to the registry, `doc` knows how to find it and print it as well:
 
