--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -244,6 +244,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * https://locarise.com/[Locarise,opts=nofollow]
 * http://logicsoft.co.in/[Logic Soft Pvt. Ltd.,opts=nofollow]
 * http://lonocloud.com/[LonoCloud (acquired by ViaSat),opts=nofollow]
+* https://www.lookingglasscyber.com/[LookingGlass Cyber Solutions,opts=nofollow]
 * https://www.loway.ch/[Loway,opts=nofollow]
 * https://lucidit.consulting[Lucid IT Consulting LLC,opts=nofollow]
 * http://www.lumanu.com/[Lumanu,opts=nofollow]
