--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -106,6 +106,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://collectivedigitalstudio.com[Collective Digital Studio,opts=nofollow]
 * http://commonwealthrobotics.com/[Commonwealth Robotics,opts=nofollow]
 * https://commsor.com/[Commsor,opts=nofollow]
+* https://www.computesoftware.com/[Compute Software,opts=nofollow]
 * http://www.condense.com.au[Condense,opts=nofollow]
 * http://www.consumerreports.org/cro/index.htm[Consumer Reports,opts=nofollow]
 * http://www.create.at/[CREATE.21st century,opts=nofollow]
