--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -203,6 +203,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * https://immute.co/[Immute,opts=nofollow]
 * https://indabamusic.com[Indaba Music,opts=nofollow]
 * http://innoq.com[InnoQ,opts=nofollow]
+* https://inspirefitness.com[Inspire Fitness,opts=nofollow]
 * https://instadeq.com/[instadeq,opts=nofollow]
 * http://www.intentmedia.com/[Intent Media,opts=nofollow]
 * http://www.interware.com.mx/[InterWare,opts=nofollow]
