--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -352,6 +352,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * https://www.redpineapplemedia.com/[Red Pineapple Media,opts=nofollow]
 * https://www.reifyhealth.com/[Reify Health,opts=nofollow]
 * http://rentpath.com/[RentPath,opts=nofollow]
+* https://www.ridehealth.com/[Ride Health,opts=nofollow]
 * http://jbrj.gov.br/[Rio de Janeiro Botanical Garden,opts=nofollow]
 * http://rjmetrics.com/[RJMetrics,opts=nofollow]
 * http://www.romr.com/[Rōmr,opts=nofollow]
