--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -217,6 +217,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://juxt.pro[JUXT,opts=nofollow]
 * http://www.kane-group.com/[Kane LPI,opts=nofollow]
 * https://kasta.ua[Kasta,opts=nofollow]
+* https://kepler16.com/[Kepler 16,opts=nofollow]
 * https://kirasystems.com/[Kira,opts=nofollow]
 * https://klarna.com[Klarna,opts=nofollow]
 * http://knowledgee.com/[Knowledge E,opts=nofollow]
