--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -370,6 +370,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * https://www.concur.com/[SAP Concur,opts=nofollow]
 * http://www.twitter-fu.com/[Sapiens Sapiens,opts=nofollow]
 * https://www.schibsted.com/[Schibsted,opts=nofollow]
+* http://www.seb.se/[SEB (Skandinaviska Enskilda Banken),opts=nofollow]
 * http://www.shareablee.com/[Shareablee,opts=nofollow]
 * https://sharetribe.com/[Sharetribe,opts=nofollow]
 * http://shore.li/[shore.li,opts=nofollow]
