--- a/content/releases/downloads.adoc
+++ b/content/releases/downloads.adoc
@@ -53,9 +53,9 @@ Clojure depends on Java and all Clojure code is compiled to Java 8 compatible by
 
 Read the https://github.com/clojure/clojure/blob/master/changes.md[Changelog] for detailed release information.
 
-== Development Release: 1.10.2-alpha4 (Nov 5, 2020)
+== Development Release: 1.10.2-rc1 (Dec 11, 2020)
 
-* Clojure 1.10.2-alpha4
+* Clojure 1.10.2-rc1
 * https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.10.2*[Clojure 1.10.2 pre-release builds]
 * <<devchangelog#,Dev changelog>>
 * Dependencies:
