--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -293,6 +293,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * https://www.nubank.com.br/[Nubank,opts=nofollow]
 * https://nukomeet.com/[Nukomeet,opts=nofollow]
 * http://numerical.co.nz/[Numerical Brass Computing,opts=nofollow]
+* https://obrizumgroup.com/[Obrizum Group Ltd.,opts=nofollow]
 * https://www.ochedart.com/[Oche Dart,opts=nofollow]
 * https://oiiku.com[Oiiku,opts=nofollow]
 * https://okletsplay.com/[OkLetsPlay,opts=nofollow]
