add companies that are hiring

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -10,6 +10,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 Also, check out the <<success_stories#,Clojure Success Stories>> and <<community_stories#,Community Stories>> pages!
 
 * https://1st1.dev/[1st1.dev,opts=nofollow]
+* https://www.3e.eu/about-3e[3e.eu,opts=nofollow]
 * http://8thlight.com/[8th Light,opts=nofollow]
 * http://www.aclaimant.com/[aclaimant,opts=nofollow]
 * https://www.active-group.de/[Active Group GmbH,opts=nofollow]
@@ -60,6 +61,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * https://boundlessgeo.com/[Boundless Geo,opts=nofollow]
 * https://brainsfeed.com[Brainsfeed,opts=nofollow]
 * https://www.braintreepayments.com/[Braintree Payments (acquired by PayPal),opts=nofollow]
+* https://site.brasilparalelo.com.br[Brasil Paralelo,opts=nofollow]
 * http://www.breezeehr.com/[Breeze EHR,opts=nofollow]
 * http://brickalloy.com/[BrickAlloy,opts=nofollow]
 * https://www.brightin.nl/[Brightin,opts=nofollow]
@@ -170,6 +172,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://functionalworks.com/[Functional Works,opts=nofollow]
 * http://fundingcircle.com[Funding Circle,opts=nofollow]
 * http://futurice.com/[Futurice,opts=nofollow]
+* https://www.iamfy.co/[Fy!,opts=nofollow]
 * http://www.getcontented.com.au/[GetContented,opts=nofollow]
 * http://about.getset.com/[GetSet,opts=nofollow]
 * http://www.gocatch.com/[GoCatch,opts=nofollow]
@@ -387,6 +390,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://www.sinapsi.com/[Sinapsi,opts=nofollow]
 * http://us.sios.com/[SIOS Technology Corp.,opts=nofollow]
 * https://sixsq.com/[SixSq,opts=nofollow]
+* https://skipp.co/[Skipp,opts=nofollow]
 * http://smilebooth.com/[Smilebooth,opts=nofollow]
 * http://smxemail.com/[SMX,opts=nofollow]
 * https://socialsuperstore.com/[Social Superstore,opts=nofollow]
@@ -455,6 +459,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * https://www.verypossible.com[Very,opts=nofollow]
 * https://verybigthings.com[VeryBigThings,opts=nofollow]
 * https://vetd.com[Vetd,opts=nofollow]
+* https://www.verrency.com/[Verrency,opts=nofollow]
 * https://viasat.com/[Viasat,opts=nofollow]
 * http://vigiglobe.com/[Vigiglobe,opts=nofollow]
 * https://www.vilect.ai/[Vilect,opts=nofollow]
