Add a few recent recommendations to the REPL guide.

--- a/content/guides/repl/annex_community_resources.adoc
+++ b/content/guides/repl/annex_community_resources.adoc
@@ -14,6 +14,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 Here is a list of useful REPL-related resources by the Clojure community:
 
+* In https://www.youtube.com/watch?v=Qx0-pViyIDU[Running with Scissors: Live Coding with Data] (slides https://github.com/stuarthalloway/presentations/wiki/Running-with-Scissors[here]), Stuart Halloway presents his workflow for solving problems with the REPL, including little-known opportunities offered by the Clojure REPL without 3rd-party tools (such as custom reading). _"You're living in your program invoking your tools, instead of living in your tools invoking your program"._
 * https://lambdaisland.com/guides/clojure-repls[The Ultimate Guide to Clojure REPLs] on Lambda Island:
 this tutorial notably explores the wide variety of Clojure REPLs and related technology.
 * https://vimeo.com/223309989[Stuart Halloway on REPL Driven Development]: a talk which reflects on the added value 
