add book, closes #496

--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,6 +12,11 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70", role="table"]
 |===
 
+| image::https://aiprobook.com/img/dlfp-cover.png[Deep Learning for Programmers,link="https://aiprobook.com/deep-learning-for-programmers/",width="130"]
+| https://aiprobook.com/deep-learning-for-programmers/[Deep Learning for Programmers] +
+by Dragan Djuric +
+Dec 21, 2020
+
 | image::https://images-na.ssl-images-amazon.com/images/I/51AWkNYd4NL._SL160.jpg[The Clojure Workshop,link="https://www.amazon.com/dp/B082FJ9ZLY",width="130"]
 | https://www.amazon.com/dp/B082FJ9ZLY[The Clojure Workshop] +
 by Joseph Fahey, Thomas Haratyk, Scott McCaughie, Yehonathan Sharvit, Konrad Szydlo +
