--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -39,6 +39,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://www.appsnsites.com/[Appsnsites,opts=nofollow]
 * http://arcstudiopro.com/[Arc Studio Pro,opts=nofollow]
 * http://ardoq.com/[Ardoq,opts=nofollow]
+* https://www.ata-llc.com/[ATA LLC,opts=nofollow]
 * https://atomist.com[Atomist,opts=nofollow]
 * https://attendify.com/[Attendify,opts=nofollow]
 * https://audiencerepublic.com[Audience Republic,opts=nofollow]
