--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -109,7 +109,7 @@ https://repl.it/languages/clojure[repl.it] provides a browser-based Clojure repl
 
 == Next steps
 
-* <<xref/../../community/tools#,Install editors and build tool>>
+* <<xref/../../community/tools#,Install editors and build tools>>
 * <<guides/learn/syntax#,Start learning the Clojure basics>>
 * <<xref/../../community/books#,Learn Clojure from a book>>
 * <<xref/../../community/resources#,Explore Clojure communities and resources>>
