--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,6 +12,11 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70", role="table"]
 |===
 
+| image::https://aiprobook.com/img/lafp-cover.png[Numerical Linear Algebra for Programmers: An Interactive Tutorial with GPU, CUDA, OpenCL, MKL, Java and Clojure,link="https://aiprobook.com/numerical-linear-algebra-for-programmers/",width="130"]
+| https://aiprobook.com/numerical-linear-algebra-for-programmers/[Numerical Linear Algebra for Programmers] +
+by Dragan Djuric +
+Jan 15, 2021
+
 | image::https://aiprobook.com/img/dlfp-cover.png[Deep Learning for Programmers,link="https://aiprobook.com/deep-learning-for-programmers/",width="130"]
 | https://aiprobook.com/deep-learning-for-programmers/[Deep Learning for Programmers] +
 by Dragan Djuric +
