--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -400,6 +400,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * https://soundcloud.com[Soundcloud,opts=nofollow]
 * https://www.soyoulearn.com/[SoYouLearn,opts=nofollow]
 * https://www.sparkfund.co/[SparkFund,opts=nofollow]
+* https://sig-gis.com/[Spatial Informatics Group,opts=nofollow]
 * http://www.spinney.io/[Spinney,opts=nofollow]
 * https://www.spotify.com[Spotify,opts=nofollow]
 * https://www.squarevenue.com[SquareVenue,opts=nofollow]
